--- a/style.scss
+++ b/style.scss
@@ -2,13 +2,16 @@ body{
     background-color: rgb(255, 255, 255);
     direction: rtl;
     main{
+        width:100vw ;
+        height:100vh ;
         @font-face {
             font-family:vazir ;
             src: url(./fonts/Vazir-Medium.woff);
         }
+        header{
         nav{
             width:100vw ;
-            height:3vh ;
+            height:4vh ;
             background-color:  #f8f8f8;
             position:fixed;
             display: flex;
@@ -41,6 +44,8 @@ body{
                     font-family: vazir;
                     text-decoration: none;
                     border-radius: 5px;
+                    margin-top:-7px ;
+                    
                 }
                  }
                
@@ -48,9 +53,151 @@ body{
                     width: 30%;
                     padding-right:150px ;
                 }
-                
             }
-        
             }
+            .hero{
+                width:100vw;
+                height: 76vh;
+                background-color: #faf9f9;
+                img{
+                    height: 100%;
+                    width: 100%;
+                    margin-top: 70px;
+                }
+                .phone{
+                    position:relative;
+                    bottom:700px ;
+                    right:670px ;
+                    width:650px ;
+                    height:1000px ;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+                .applications{
+                      background-image: linear-gradient(51deg, rgba(23, 26, 60, .7) 5%, rgba(23, 26, 60, .3) 95%);
+                      border-radius: 20px;
+                      padding: 25px;
+                     width: 480px;
+                     position: absolute;
+                     top:370px;
+                     right: 190px;
+                     height: 370px;
+
+                     
+                     h1{
+                        font-family: vazir;
+                        color: #ffffff;
+                        font-size: 48px;
+                        position: absolute;
+                        top: 0;
+                        
+                     }
+                     h2{
+                        color: #ffff;
+                        font-size:26px ;
+                        font-weight: 300;
+                        font-family: vazir;
+                        margin-top:90px ;
+                     }
+                     .first-box{
+                        width: 100%;
+                        height:56px ;
+                        background-color:transparent;
+                        display: flex;
+                        margin-top:40px ;
+                        p{
+                            font-family: vazir;
+                            font-size: 16px;
+                        }
+                        .first{
+                            width:224px ;
+                            height:100%;
+                            background-color: #ffff;
+                            margin-top:0;
+                            align-items: center;
+                            display: flex;
+                            justify-content: center;
+                            border-radius:10px ;
+                            display: flex;
+                        }
+                         .second{
+                            width:224px ;
+                            height:100%;
+                            background-color: #ffff;
+                            margin-top:0;
+                            align-items: center;
+                            display: flex;
+                            justify-content: center;
+                            border-radius:10px ;
+                            margin-right: 30px;;
+                         }
+                     }}
+                     .secend-box{
+                        width: 100%;
+                        height:56px ;
+                        background-color:transparent;
+                        display: flex;
+                        margin-top: 20px;
+
+                        p{
+                            font-family: vazir;
+                            font-size: 16px;
+                     }
+                     .first{
+                        width:224px ;
+                        height:100%;
+                        background-color: transparent;
+                        margin-top:0;
+                        align-items: center;
+                        display: flex;
+                        justify-content: center;
+                        border-radius:10px ;
+                        display: flex;
+                        border: 2px solid #ffff;
+                        p{
+                            color: #ffff;
+                        }
+                     }
+                     .secend{
+                        width:224px ;
+                        height:100%;
+                        background-color: transparent;
+                        margin-top:0;
+                        align-items: center;
+                        display: flex;
+                        justify-content: center;
+                        border-radius:10px ;
+                        margin-right: 30px;
+                       border: 2px solid #ffff;
+                        p{
+                            color: #ffff;
+                        }
+                     }
+                }
+                .third-box{
+                    width:224px ;
+                    height:56px;
+                    background-color: transparent;
+                    margin-top:0;
+                    align-items: center;
+                    display: flex;
+                    justify-content: center;
+                    border-radius:10px ;
+                    margin-top:20px ;
+                    margin-right:125px ;
+                    border: 2px solid #ffff;
+                    p{
+                        color: #ffff;
+                        font-family: vazir;
+                        font-size: 16px;
+                    }
+                }
         }
+          
+           
+        }
+
     
+            }
