--- a/style/style.css
+++ b/style/style.css
@@ -2,20 +2,24 @@ body {
   background-color: rgb(255, 255, 255);
   direction: rtl;
 }
+body main {
+  width: 100vw;
+  height: 100vh;
+}
 @font-face {
   font-family: vazir;
   src: url(./fonts/Vazir-Medium.woff);
 }
-body main nav {
+body main header nav {
   width: 100vw;
-  height: 3vh;
+  height: 4vh;
   background-color: #f8f8f8;
   position: fixed;
   display: flex;
   align-items: center;
   padding: 15px;
 }
-body main nav ul {
+body main header nav ul {
   width: 70%;
   height: 100%;
   list-style-type: none;
@@ -23,12 +27,12 @@ body main nav ul {
   gap: 35px;
   background-color: #f8f8f8;
 }
-body main nav ul li a {
+body main header nav ul li a {
   font-family: vazir;
   color: #545454;
   text-decoration: none;
 }
-body main nav ul .button {
+body main header nav ul .button {
   width: 110px;
   display: flex;
   justify-content: center;
@@ -39,10 +43,148 @@ body main nav ul .button {
   font-family: vazir;
   text-decoration: none;
   border-radius: 5px;
+  margin-top: -7px;
 }
-body main nav span {
+body main header nav span {
   width: 30%;
   padding-right: 150px;
+}
+body main .hero {
+  width: 100vw;
+  height: 76vh;
+  background-color: #faf9f9;
+}
+body main .hero img {
+  height: 100%;
+  width: 100%;
+  margin-top: 70px;
+}
+body main .hero .phone {
+  position: relative;
+  bottom: 700px;
+  right: 670px;
+  width: 650px;
+  height: 1000px;
+}
+body main .hero .phone img {
+  width: 100%;
+  height: 100%;
+}
+body main .hero .applications {
+  background-image: linear-gradient(51deg, rgba(23, 26, 60, 0.7) 5%, rgba(23, 26, 60, 0.3) 95%);
+  border-radius: 20px;
+  padding: 25px;
+  width: 480px;
+  position: absolute;
+  top: 370px;
+  right: 190px;
+  height: 370px;
+}
+body main .hero .applications h1 {
+  font-family: vazir;
+  color: #ffffff;
+  font-size: 48px;
+  position: absolute;
+  top: 0;
+}
+body main .hero .applications h2 {
+  color: white;
+  font-size: 26px;
+  font-weight: 300;
+  font-family: vazir;
+  margin-top: 90px;
+}
+body main .hero .applications .first-box {
+  width: 100%;
+  height: 56px;
+  background-color: transparent;
+  display: flex;
+  margin-top: 40px;
+}
+body main .hero .applications .first-box p {
+  font-family: vazir;
+  font-size: 16px;
+}
+body main .hero .applications .first-box .first {
+  width: 224px;
+  height: 100%;
+  background-color: white;
+  margin-top: 0;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  display: flex;
+}
+body main .hero .applications .first-box .second {
+  width: 224px;
+  height: 100%;
+  background-color: white;
+  margin-top: 0;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  margin-right: 30px;
+}
+body main .hero .secend-box {
+  width: 100%;
+  height: 56px;
+  background-color: transparent;
+  display: flex;
+  margin-top: 20px;
+}
+body main .hero .secend-box p {
+  font-family: vazir;
+  font-size: 16px;
+}
+body main .hero .secend-box .first {
+  width: 224px;
+  height: 100%;
+  background-color: transparent;
+  margin-top: 0;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  display: flex;
+  border: 2px solid white;
+}
+body main .hero .secend-box .first p {
+  color: white;
+}
+body main .hero .secend-box .secend {
+  width: 224px;
+  height: 100%;
+  background-color: transparent;
+  margin-top: 0;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  margin-right: 30px;
+  border: 2px solid white;
+}
+body main .hero .secend-box .secend p {
+  color: white;
+}
+body main .hero .third-box {
+  width: 224px;
+  height: 56px;
+  background-color: transparent;
+  margin-top: 0;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-right: 125px;
+  border: 2px solid white;
+}
+body main .hero .third-box p {
+  color: white;
+  font-family: vazir;
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
