--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: vazir;
+  src: url(../fonts/Vazir-Medium.woff);
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: rgb(255, 255, 255);
   direction: rtl;
@@ -8,7 +18,7 @@ body main {
 }
 @font-face {
   font-family: vazir;
-  src: url(./fonts/Vazir-Medium.woff);
+  src: url(../fonts/Vazir-Medium.woff);
 }
 body main header nav {
   width: 100vw;
@@ -18,6 +28,9 @@ body main header nav {
   display: flex;
   align-items: center;
   padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 body main header nav ul {
   width: 70%;
@@ -33,7 +46,7 @@ body main header nav ul li a {
   text-decoration: none;
 }
 body main header nav ul .button {
-  width: 110px;
+  width: 17%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,9 +57,11 @@ body main header nav ul .button {
   text-decoration: none;
   border-radius: 5px;
   margin-top: -7px;
+  font-size: 15px;
 }
 body main header nav span {
   width: 30%;
+  margin-top: 2vh;
   padding-right: 150px;
 }
 body main .hero {
@@ -78,7 +93,7 @@ body main .hero .applications {
   position: absolute;
   top: 370px;
   right: 190px;
-  height: 370px;
+  height: 42vh;
 }
 body main .hero .applications h1 {
   font-family: vazir;
