--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,18 @@
      @use './-typography.scss';
      @use './-resert.scss';
+     @mixin boxses (){
+        background-color: #ffff;
+        margin-top:0;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+     }
+     @mixin wrapper-boxes (){
+        width: 100%;
+        height:56px ;
+        background-color:transparent;
+        display: flex;
+     }
 body{
     background-color: rgb(255, 255, 255);
     direction: rtl;
@@ -108,43 +121,29 @@ body{
                         margin-top:90px ;
                      }
                      .first-box{
-                        width: 100%;
-                        height:56px ;
-                        background-color:transparent;
-                        display: flex;
+                        @include wrapper-boxes ();
                         margin-top:40px ;
                         p{
                             font-family: vazir;
                             font-size: 16px;
                         }
                         .first{
+                            @include boxses ();
                             width:224px ;
                             height:100%;
-                            background-color: #ffff;
-                            margin-top:0;
-                            align-items: center;
-                            display: flex;
-                            justify-content: center;
                             border-radius:10px ;
                             display: flex;
                         }
                          .second{
+                            @include boxses ();
                             width:224px ;
                             height:100%;
-                            background-color: #ffff;
-                            margin-top:0;
-                            align-items: center;
-                            display: flex;
-                            justify-content: center;
                             border-radius:10px ;
                             margin-right: 30px;;
                          }
                      }}
                      .secend-box{
-                        width: 100%;
-                        height:56px ;
-                        background-color:transparent;
-                        display: flex;
+                        @include wrapper-boxes ();
                         margin-top: 20px;
 
                         p{
